[package]
name = "massa_async_pool"
version = "0.23.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

[dependencies]
nom = "=7.1"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

# custom modules
massa_hash = { path = "../massa-hash" }
massa_ledger_exports = { path = "../massa-ledger-exports" }
massa_models = { path = "../massa-models" }
massa_serialization = { path = "../massa-serialization" }
massa_signature = { path = "../massa-signature" }

massa_db_exports = { path = "../massa-db-exports" }
massa_time = { path = "../massa-time" }
massa_proto = { path = "../massa-proto" }

[dev-dependencies]
tempfile = "3.3"
massa_ledger_worker = { path = "../massa-ledger-worker" }

# for more information on what are the following features used for, see the cargo.toml at workspace level
[features]
testing = []
sandbox = []
