[package]
name = "massa_async_pool"
version = "0.24.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

[features]
testing = []
sandbox = []

[dependencies]
nom = {workspace = true}
num = {workspace = true}
serde = {workspace = true, "features" = ["derive"]}
rand = {workspace = true}
parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
massa_hash = {workspace = true}
massa_ledger_exports = {workspace = true}
massa_models = {workspace = true}
massa_serialization = {workspace = true}
massa_signature = {workspace = true}
massa_db_exports = {workspace = true}
massa_time = {workspace = true}
massa-proto-rs = {workspace = true, "features" = ["tonic"]}

[dev-dependencies]
tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
massa_ledger_worker = {workspace = true}
