[package]
name = "massa_async_pool"
version = "28.5.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

[features]
test-exports = []
sandbox = []

[dependencies]
nom = { workspace = true }
num = { workspace = true }
serde = { workspace = true, "features" = ["derive"] }
rand = { workspace = true }
massa_ledger_exports = { workspace = true }
massa_models = { workspace = true }
massa_serialization = { workspace = true }
massa_signature = { workspace = true }
massa_db_exports = { workspace = true }
massa-proto-rs = { workspace = true, "features" = ["tonic"] }
serde_json = { workspace = true }                             # BOM UPGRADE     Revert to "1.0" if problem
serde_with = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }            # BOM UPGRADE     Revert to "3.3" if problem
parking_lot = { workspace = true }
assert_matches = { workspace = true }
massa_ledger_worker = { workspace = true }
massa_db_worker = { workspace = true }
