[package]
name = "massa_bootstrap"
version = "0.1.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
num_enum = "0.5"
nom = "7.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
humantime = "2.1.0"
thiserror = "1.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
tracing = "0.1"
substruct = { git = "https://github.com/sydhds/substruct" }
socket2 = "0.4.7"
crossbeam = "0.8.2"
mio =  { version = "0.8", features = ["net", "os-poll"] }

# custom modules
massa_async_pool = { path = "../massa-async-pool" }
massa_consensus_exports = { path = "../massa-consensus-exports" }
massa_executed_ops = { path = "../massa-executed-ops" }
massa_final_state = { path = "../massa-final-state" }
massa_hash = { path = "../massa-hash" }
massa_ledger_exports = { path = "../massa-ledger-exports" }
massa_logging = { path = "../massa-logging" }
massa_models = { path = "../massa-models" }
massa_protocol_exports = { path = "../massa-protocol-exports" }
massa_serialization = { path = "../massa-serialization" }
massa_signature = { path = "../massa-signature" }
massa_pos_exports = { path = "../massa-pos-exports" }
massa_time = { path = "../massa-time" }
massa_versioning = { path = "../massa-versioning" }

[dev-dependencies]
mockall = "0.11.4"
bitvec = { version = "1.0", features = ["serde"] }
massa_final_state = { path = "../massa-final-state", features = ["testing"] }
massa_async_pool = { path = "../massa-async-pool", features = ["testing"] }
massa_ledger_worker = { path = "../massa-ledger-worker", features = [
    "testing",
] }
massa_pos_worker = { path = "../massa-pos-worker", features = ["testing"] }
massa_pos_exports = { path = "../massa-pos-exports", features = ["testing"] }
massa_consensus_exports = { path = "../massa-consensus-exports", features = [
    "testing",
] }
lazy_static = "1.4"
tempfile = "3.3"


# for more information on what are the following features used for, see the cargo.toml at workspace level
[features]
testing = ["massa_final_state/testing", "massa_ledger_worker/testing", "massa_consensus_exports/testing", "massa_async_pool/testing"]
sandbox = ["massa_async_pool/sandbox", "massa_final_state/sandbox", "massa_models/sandbox"]
