[package]
name = "massa_cipher"
version = "0.23.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.2"
thiserror = "1.0"
aes-gcm = "0.10"
pbkdf2 = "0.11"
rand = "0.8"

# custom modules
massa_serialization = { path = "../massa-serialization" }
