[package]
name = "massa-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
console = "0.15"
dialoguer = { version = "0.10", features = ["history", "completion"] }
erased-serde = "0.3"
glob = "0.3"
lazy_static = "1.4"
paw = "1.0"
rev_lines = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = ["paw"] }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.19", features = ["full"] }
# custom modules
massa_models = { path = "../massa-models" }
massa_signature = { path = "../massa-signature" }
massa_time = { path = "../massa-time" }
massa_sdk = { path = "../massa-sdk" }
massa_wallet = { path = "../massa-wallet" }

[target.'cfg(not(windows))'.dependencies]
tilde-expand = "0.1"

[dev-dependencies]
toml_edit = "0.14"

# for more information on what are the following features used for, see the cargo.toml at workspace level
[features]
hash-prefix = ["massa_models/hash-prefix", "massa_signature/hash-prefix"]
instrument = [
    "tokio/tracing",
    "massa_models/instrument",
    "massa_time/instrument",
]
