[package]
name = "massa-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
console = "0.15"
dialoguer = "0.10"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
erased-serde = "0.3"
lazy_static = "1.4"
paw = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = { version = "0.3", features = ["paw"] }
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.23", features = ["full"] }
# custom modules
massa_api_exports = { path = "../massa-api-exports" }
massa_models = { path = "../massa-models" }
massa_signature = { path = "../massa-signature" }
massa_time = { path = "../massa-time" }
massa_sdk = { path = "../massa-sdk" }
massa_wallet = { path = "../massa-wallet" }

[dev-dependencies]
toml_edit = "0.19"

