[package]
name = "massa-client"
version = "0.25.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
atty = {workspace = true}
console = {workspace = true}
dialoguer = {workspace = true}
rustyline = {workspace = true}
rustyline-derive = {workspace = true}
erased-serde = {workspace = true}
lazy_static = {workspace = true}   # BOM UPGRADE     Revert to "1.4" if problem
paw = {workspace = true}
serde = {workspace = true, "features" = ["derive"]}
serde_json = {workspace = true}   # BOM UPGRADE     Revert to "1.0" if problem
structopt = {workspace = true, "features" = ["paw"]}
strum = {workspace = true}
strum_macros = {workspace = true}
tokio = {workspace = true, "features" = ["full"]}
massa_api_exports = {workspace = true}
massa_models = {workspace = true}
massa_signature = {workspace = true}
massa_time = {workspace = true}
massa_sdk = {workspace = true}
massa_wallet = {workspace = true}

[dev-dependencies]
toml_edit = {workspace = true}
