[package]
name = "massa_consensus_exports"
version = "0.24.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.6"
displaydoc = "0.2"
nom = "=7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonrpsee = { version = "0.18.2", features = ["server"] }
tokio = { version = "1.23", features = ["sync"] }
mockall = {version =  "0.11.4", features = ["nightly"], optional = true}
#custom modules
massa_channel = { path = "../massa-channel" }
massa_hash = { path = "../massa-hash"}
massa_execution_exports = { path = "../massa-execution-exports" }
massa_models = { path = "../massa-models" }
massa_pool_exports = { path = "../massa-pool-exports" }
massa_pos_exports = { path = "../massa-pos-exports" }
massa_protocol_exports ={ path = "../massa-protocol-exports" }
massa_storage = { path = "../massa-storage" }
massa_serialization = { path = "../massa-serialization" }
massa_time = { path = "../massa-time" }
massa_signature = { path = "../massa-signature" }

[features]
testing = ["massa_models/testing", "massa_execution_exports/testing", "massa_pool_exports/testing", "massa_pos_exports/testing", "massa_protocol_exports/testing", "massa_storage/testing", "dep:mockall"]
