[package]
name = "massa_consensus_exports"
version = "0.25.2"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

[features]
testing = ["massa_models/testing", "massa_execution_exports/testing", "massa_pool_exports/testing", "massa_pos_exports/testing", "massa_protocol_exports/testing", "massa_storage/testing", "dep:mockall"]

[dependencies]
crossbeam-channel = {workspace = true}   # BOM UPGRADE     Revert to "0.5.6" if problem
displaydoc = {workspace = true}
nom = {workspace = true}
serde = {workspace = true, "features" = ["derive"]}
serde_json = {workspace = true}   # BOM UPGRADE     Revert to "1.0" if problem
thiserror = {workspace = true}
jsonrpsee = {workspace = true, "features" = ["server"]}
tokio = {workspace = true, "features" = ["sync"]}
mockall = {workspace = true, "features" = ["nightly"], "optional" = true}   # BOM UPGRADE     Revert to {"version": "0.11.4", "features": ["nightly"], "optional": true} if problem
massa_channel = {workspace = true}
massa_hash = {workspace = true}
massa_execution_exports = {workspace = true}
massa_models = {workspace = true}
massa_pool_exports = {workspace = true}
massa_pos_exports = {workspace = true}
massa_protocol_exports = {workspace = true}
massa_storage = {workspace = true}
massa_serialization = {workspace = true}
massa_time = {workspace = true}
massa_signature = {workspace = true}
