[package]
name = "massa_consensus_worker"
version = "0.24.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
crossbeam = "0.8"
#custom modules
massa_channel = { path = "../massa-channel" }
massa_metrics = { path = "../massa-metrics"}
massa_consensus_exports = { path = "../massa-consensus-exports" }
massa_models = { path = "../massa-models" }
massa_storage = { path = "../massa-storage" }
massa_signature = { path = "../massa-signature" }
massa_time = { path = "../massa-time" }
massa_hash = { path = "../massa-hash" }
massa_logging = { path = "../massa-logging" }
massa_execution_exports = { path = "../massa-execution-exports", optional = true}
massa_protocol_exports = { path = "../massa-protocol-exports", optional = true}
massa_pos_worker = { path = "../massa-pos-worker", optional = true}
massa_pos_exports = { path = "../massa-pos-exports", optional = true}
massa_pool_exports = { path = "../massa-pool-exports", optional = true}
tokio = { version = "1.0", optional = true }
crossbeam-channel = { version = "0.5.6", optional = true }


[dev-dependencies]
rand= "0.8"
itertools = "0.10"

[features]
sandbox = []
bootstrap_server = []
testing = ["tokio", "crossbeam-channel", "massa_execution_exports/testing", "massa_pos_worker/testing",  "massa_protocol_exports/testing", "massa_consensus_exports/testing", "massa_pos_exports/testing", "massa_pool_exports/testing"]
