[package]
name = "massa_consensus_worker"
version = "28.5.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

[features]
sandbox = []
bootstrap_server = []
test-exports = ["tokio", "crossbeam-channel", "massa_execution_exports/test-exports", "massa_protocol_exports/test-exports", "massa_consensus_exports/test-exports", "massa_pos_exports/test-exports", "massa_pool_exports/test-exports"]

[dependencies]
num = {workspace = true, "features" = ["serde"]}   # BOM UPGRADE     Revert to {"version": "0.4", "features": ["serde"]} if problem
tracing = {workspace = true, "features" = ["log"]}   # BOM UPGRADE     Revert to {"version": "0.1", "features": ["log"]} if problem
parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
crossbeam = {workspace = true}
massa_channel = {workspace = true}
massa_metrics = {workspace = true}
massa_consensus_exports = {workspace = true}
massa_models = {workspace = true}
massa_serialization = {workspace = true}
massa_storage = {workspace = true}
massa_signature = {workspace = true}
massa_time = {workspace = true}
massa_hash = {workspace = true}
massa_logging = {workspace = true}
massa_execution_exports = {workspace = true}
massa_protocol_exports = {workspace = true, "optional" = true}
massa_pos_exports = {workspace = true, "optional" = true}
massa_pool_exports = {workspace = true, "optional" = true}
tokio = {workspace = true, "optional" = true}   # BOM UPGRADE     Revert to {"version": "1.0", "optional": true} if problem
crossbeam-channel = {workspace = true, "optional" = true}   # BOM UPGRADE     Revert to {"version": "0.5.6", "optional": true} if problem

[dev-dependencies]
massa_pool_exports = {workspace = true, features = ["test-exports"]}
massa_pos_exports = {workspace = true, features = ["test-exports"]}
massa_protocol_exports = {workspace = true, features = ["test-exports"]}
massa_execution_exports = {workspace = true, features = ["test-exports"]}
massa_consensus_exports = {workspace = true, features = ["test-exports"]}
massa_test_framework = {workspace = true, "features" = ["test-exports"]}
mockall = {workspace = true}
rand = {workspace = true}
itertools = {workspace = true}
tokio = {workspace = true}
