[package]
name = "massa_db_exports"
version = "0.25.2"
edition = "2021"

[dependencies]
displaydoc = {workspace = true}
thiserror = {workspace = true}
parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
massa_hash = {workspace = true}
massa_models = {workspace = true}
massa_serialization = {workspace = true}
