[package]
name = "massa_db_worker"
version = "0.25.2"
edition = "2021"

[dependencies]
parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
rocksdb = {workspace = true}
lsmtree = {workspace = true}
massa_hash = {workspace = true}
massa_models = {workspace = true}
massa_serialization = {workspace = true}
massa_db_exports = {workspace = true}
