[package]
name = "massa_db_worker"
version = "29.1.0"
edition = "2021"

[features]
test-exports = ["massa_db_exports/test-exports"]
jemalloc = ["rocksdb/jemalloc"]

[dependencies]
parking_lot = {workspace = true}
rocksdb = {workspace = true}
massa_hash = {workspace = true}
massa_models = {workspace = true}
massa_serialization = {workspace = true}
massa_db_exports = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}
assert_matches = {workspace = true}

