[package]
name = "massa_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.20"
displaydoc = "0.2"
thiserror = "1.0"

# Custom modules
massa_hash = { path = "../massa-hash" }
massa_models = { path = "../massa-models" }
massa_serialization = { path = "../massa-serialization" }