[package]
name = "massa_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
rocksdb = "0.20"
displaydoc = "0.2"
thiserror = "1.0"

# Fork of monotree = "0.1.4"
monotree = { git = "https://github.com/massalabs/monotree", branch = "master" }
#monotree = { path = "../../monotree"}

# Custom modules
massa_hash = { path = "../massa-hash" }
massa_models = { path = "../massa-models" }
massa_serialization = { path = "../massa-serialization" }
