[package]
name = "massa_deferred_calls"
version = "2.2.0"
authors = ["Massa Labs <info@massa.net>"]
edition = "2021"

[features]
test-exports = []
sandbox = []

[dependencies]
serde = { workspace = true, "features" = ["derive"] }
nom = { workspace = true }
massa_db_exports = { workspace = true }
massa_ledger_exports = { workspace = true }
massa_models = { workspace = true }
massa_serialization = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
massa_db_worker = { workspace = true }
parking_lot = { workspace = true }
